--- a/_config.yml
+++ b/_config.yml
@@ -9,23 +9,23 @@ version: 2
 name: Tune Katerungroch
 title: Senior System Administrator
 email: contact@tunek.cloud
-website: https://www.linkedin.com/in/tunek/
+#website: https://www.linkedin.com/in/tunek/
 
 # Dark Mode (true/false/never)
 darkmode: true
 
 # Social links
-twitter_username: facespics
+#twitter_username: facespics
 github_username:  naamtune
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
+#instagram_username: jameswgrant
 linkedin_username: tunek
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: globalmtb
+#youtube_username: globalmtb
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
@@ -48,9 +48,9 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Tunet and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  I am most skilled in: <mark>network security</mark> and <mark>climbing rocks</mark>
 
 content:
   - title: Projects # Title for the section
@@ -76,11 +76,22 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: Consolidated Precision Products
+        link: cppcorp.com
         # link_text: boringcompany.com
         sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        caption: June 2012 - Present
+        quote: >
+          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    content:
+      - layout: left
+        title: Virmach
+        link: virmach.com
+        # link_text: boringcompany.com
+        sub_title: Level 3 Technical Support
+        caption: January 2015 - March 2015
         quote: >
           Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
