--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,10 @@ linkedin_username: tunek
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://www.itsgoingto.be
+#additional_links:
+#- title: itsgoingto.be
+#  icon: fas fa-globe
+#  url: https://www.itsgoingto.be
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -79,18 +79,43 @@ content:
         title: Consolidated Precision Products
         link: cppcorp.com
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: June 2012 - Present
+        sub_title: Information Security Specialist (Network Security Engineer)
+        caption: April 2023 - Present
         quote: >
           Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+
+    layout: list # Type of content section (list/text)
+    content:
       - layout: left
-        title: Virmach
+        title: Consolidated Precision Products
+        link: cppcorp.com
+        # link_text: boringcompany.com
+        sub_title: IT Technical Specialist (Senior Windows System Administrator)
+        caption: June 2012 - April 2023
+        quote: >
+          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+
+      - layout: left
+        title: Virtual Machine Solutions
         link: virmach.com
         # link_text: boringcompany.com
-        sub_title: Level 3 Technical Support
-        caption: January 2015 - March 2015
+        sub_title: Level 3 Technical Support Contractor
+        caption: February 2018 - May 2018
+        quote: >
+          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+
+      - layout: left
+        title: Redlands East Valley Highschool
+        link: rev.redlandsusd.net/
+        # link_text: boringcompany.com
+        sub_title: PC Technician
+        caption: August 2010 - June 2011
         quote: >
           Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
