--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ content:
       - Outdoor Photography
 
       Look at this cool image  
-      ![Trees](/images/sedona1.jpg "Trees")
+      ![Trees](images/sedona1.jpg "Trees")
 
 # Footer
 footer_show_references: true
