--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ linkedin_username: tunek
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Tunet and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Tune and I'm a senior network system administrator. As well as administrating systems and open-source intelligence gathering, I also have experience in project management. I have worked  gaining teamwork and leadership skills.
 
   I am most skilled in: <mark>network security</mark> and <mark>climbing rocks</mark>
 
