--- a/_config.yml
+++ b/_config.yml
@@ -158,8 +158,8 @@ content:
             * Assisted with level 1 helpdesk issues. 
             * Managed the school campus website.
 
-            **Technical Skills:**  <mark>SIEM</mark>, <mark>EDR</mark>, <mark>OSINT</mark>, <mark>RADIUS</mark>, <mark>PKI</mark>, <mark>AAA</mark>, <mark>802.1X</mark>, <mark>EAP-TLS</mark>, <mark>Governance, Risk, and Compliance</mark>, <mark>Fortigate</mark>, <mark>Stateless & Stateful ACL Firewalls</mark>, <mark>NAC</mark>  
-            **Technologies:**
+            **Technical Skills:** <mark>Symantec Ghost Imaging</mark> <mark>Windows XP</mark>  
+            **Technologies:** <mark>Symantec Ghost Imaging</mark> <mark>Windows XP</mark>
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
