--- a/_config.yml
+++ b/_config.yml
@@ -101,8 +101,8 @@ content:
             * Worked closely with security team, infrastructure team, and stakeholders to address critical/high-priority vulnerabilities found through Nessus/Rapid7.
             * Collaborated with security team and upper management to author/coauthor company-wide security policies and procedures to satisfy regulations and compliance. 
 
-            **Technical Skills:**  <mark>SIEM</mark>, <mark>EDR</mark>, <mark>OSINT</mark>, <mark>RADIUS</mark>, <mark>PKI</mark>, <mark>AAA</mark>, <mark>802.1X</mark>, <mark>EAP-TLS</mark>, <mark>Governance, Risk, and Compliance</mark>, <mark>Fortigate</mark>, <mark>Stateless & Stateful ACL Firewalls</mark>, <mark>NAC</mark>  
-            **Technologies:**  
+            **Technical Skills:** <mark>Network switching</mark> <mark>OSINT</mark> <mark>GRC</mark> <mark>SIEM monitoring</mark> <mark>vulnerability assessment</mark> <mark>cloud network engineering</mark> <mark>network security</mark> <mark>incident responder</mark>  
+            **Technologies:** <mark>Azure</mark> <mark>Sentinel1</mark> <mark>Carbon Black</mark> <mark>Trendmicro</mark> <mark>Nessus</mark> <mark>Nmap</mark> <mark>OpenSSL</mark> <mark>PKI</mark> <mark>Pfsense</mark> <mark>Fortigate</mark> <mark>ACL</mark> <mark>VSF</mark> <mark>RSTP</mark> <mark>MSTP</mark> <mark>LACP</mark> <mark>DHCP snooping</mark> <mark>port security</mark> <mark>802.1X</mark> <mark>AAA</mark> <mark>Solarwinds</mark> <mark>SCADA</mark> <mark>PLC</mark> <mark>Ignition</mark> <mark>Git</mark>  
             ---
       - layout: left
         title: Consolidated Precision Products
@@ -126,8 +126,8 @@ content:
             * Developed custom Powershell scripts to automate repetitive mundane tasks to free up time and resources to focus on more impactful tasks and projects.
             * Manage/Configure/Troubleshoot Microsoft O365/Entra/Azure technical issues
 
-            **Technical Skills:**  <mark>SIEM</mark>, <mark>EDR</mark>, <mark>OSINT</mark>, <mark>RADIUS</mark>, <mark>PKI</mark>, <mark>AAA</mark>, <mark>802.1X</mark>, <mark>EAP-TLS</mark>, <mark>Governance, Risk, and Compliance</mark>, <mark>Fortigate</mark>, <mark>Stateless & Stateful ACL Firewalls</mark>, <mark>NAC</mark>  
-            **Technologies:**  
+            **Technical Skills:** <mark>Leadership</mark> <mark>Powershell</mark> <mark>SQL</mark> <mark>Python</mark> <mark>C++</mark> <mark>PHP</mark> <mark>TCP/IP</mark> <mark>hardware reverse engineering</mark> <mark>technical writing</mark> <mark>network architect</mark> <mark>database administration</mark>  
+            **Technologies:** <mark>Windows Server 2012/2016/2019/2022</mark> <mark>Windows 2000/XP/7/10/11</mark> <mark>Linux</mark> <mark>WDS</mark> <mark>MDT</mark> <mark>Powershell</mark> <mark>Visio</mark> <mark>Office 365</mark> <mark>Entra</mark> <mark>Confluence</mark> <mark>Wiki.js</mark> <mark>Windbg</mark> <mark>Ollydbg</mark> <mark>Sysinternals</mark> <mark>VMWare ESX</mark> <mark>MySQL</mark> <mark>MSSQL</mark> <mark>Veeam</mark> <mark>Grapfana</mark> <mark>Kaftka</mark>  
             ---
       - layout: left
         title: Virtual Machine Solutions
@@ -143,8 +143,8 @@ content:
             * Monitored and stablized server performance using provided tools such as Nixstats, iostats, sar, top, etc.
             * Combed through customers to look for abusive uses such as crypto-mining and hosting malware.
 
-            **Technical Skills:**  <mark>SIEM</mark>, <mark>EDR</mark>, <mark>OSINT</mark>, <mark>RADIUS</mark>, <mark>PKI</mark>, <mark>AAA</mark>, <mark>802.1X</mark>, <mark>EAP-TLS</mark>, <mark>Governance, Risk, and Compliance</mark>, <mark>Fortigate</mark>, <mark>Stateless & Stateful ACL Firewalls</mark>, <mark>NAC</mark>  
-            **Technologies:**  
+            **Technical Skills:** <mark>digital forensic investigation</mark> <mark>customer support</mark> <mark>client billings</mark> <mark>web hosting</mark>  
+            **Technologies:** <mark>SolusVM</mark> <mark>cPanel</mark> <mark>WHM</mark> <mark>VPS</mark> <mark>Managed Colocations</mark> <mark>Nixstats</mark> <mark>iostats</mark> <mark>sar</mark> <mark>top</mark>  
             ---
       - layout: left
         title: Redlands East Valley Highschool
@@ -158,7 +158,7 @@ content:
             * Assisted with level 1 helpdesk issues. 
             * Managed the school campus website.
 
-            **Technical Skills:** <mark>Symantec Ghost Imaging</mark> <mark>Windows XP</mark>  
+            **Technical Skills:** <mark>VBS</mark> <mark>Batch</mark>  
             **Technologies:** <mark>Symantec Ghost Imaging</mark> <mark>Windows XP</mark>
 
   - title: Education # Title for the section
