--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Tune Katerungroch
-title: Senior System Administrator
+title: Network Security and Infrastructure
 email: contact@tunek.cloud
 #website: https://www.linkedin.com/in/tunek/
 
@@ -65,20 +65,13 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
-        # link_text: Project Website
-        additional_links:
-          - title:  sproogen/modern-resume-theme
-            icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+        title: Ukrainian PS752 Incident
         description: | # this will include new lines to allow paragraphs
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+        title: Ukrainian PS752 Incident
+        description: | # this will include new lines to allow paragraphs
+            I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+  
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
@@ -167,17 +160,15 @@ content:
             **Technical Skills:** <mark>VBS</mark> <mark>Batch</mark>  
             **Technologies:** <mark>Symantec Ghost Imaging</mark> <mark>Windows XP</mark>
 
-  - title: Education # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: Crafton Hills Community COllege
-        caption: 2011 - 2013
-        sub_title: Student
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+  - title: Certifications # Title for the section
+  layout: text
+  content: | # this will include new lines to allow paragraphs
+    - Cisco Certified Networking Associate (CCNA)
+    - CompTIA Security+
+    - CompTIA Network+
+    - CompTIA A+
+    - Microsoft Azure Security, Compliance, and Identity Fundamentals (SC-900)
+    - Microsoft Azure Network Fundamentals (AZ-900)
 
   - title: A Little More About Me
     layout: text
