--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ darkmode: true
 
 # Social links
 #twitter_username: facespics
-github_username:  naamtune
+github_username: naamtune
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
@@ -68,11 +68,12 @@ content:
         title: Ukrainian PS752 Incident
         description: | # this will include new lines to allow paragraphs
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-        title: Ukrainian PS752 Incident
+
+      - layout: top-middle
+          title: Ukrainian PS752 Incident
         description: | # this will include new lines to allow paragraphs
             I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
   
-
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
