--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,13 @@ about_content: | # this will include new lines to allow paragraphs
   I am most skilled in: <mark>network security</mark>, <mark>network switching</mark>, <mark>open-source intelligence gathering</mark>, <mark>Windows Server administration</mark>, and <mark>project management</mark>.
 
 content:
+  - title: Projects # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: top-middle
+        title: Ukrainian PS752 Incident
+        description: | # this will include new lines to allow paragraphs
+          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
