--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Tune Katerungroch
-title: Network Security and Infrastructure
+title: Network Security and Infrastructure Administration
 email: contact@tunek.cloud
 #website: https://www.linkedin.com/in/tunek/
 
@@ -16,7 +16,7 @@ darkmode: true
 
 # Social links
 #twitter_username: facespics
-github_username: naamtune
+github_username:  naamtune
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
@@ -65,9 +65,21 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Ukrainian PS752 Incident
+        title: Super awesome project
+        link: github.com/sproogen
+        # link_text: Project Website
+        additional_links:
+          - title:  sproogen/modern-resume-theme
+            icon: fab fa-github
+            url: github.com/sproogen/modern-resume-theme
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        quote: >
+          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
