--- a/_config.yml
+++ b/_config.yml
@@ -167,17 +167,15 @@ content:
             **Technical Skills:** <mark>VBS</mark> <mark>Batch</mark>  
             **Technologies:** <mark>Symantec Ghost Imaging</mark> <mark>Windows XP</mark>
 
-  - title: Education # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: Crafton Hills Community COllege
-        caption: 2011 - 2013
-        sub_title: Student
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+  - title: Certifications # Title for the section
+    layout: text
+    content: | # this will include new lines to allow paragraphs
+    - Cisco Certified Networking Associate (CCNA)
+    - CompTIA Security+
+    - CompTIA Network+
+    - CompTIA A+
+    - Microsoft Azure Security, Compliance, and Identity Fundamentals (SC-900)
+    - Microsoft Azure Network Fundamentals (AZ-900)
 
   - title: A Little More About Me
     layout: text
